# models

./: Discriminative_test.ipynb  Illustration ratio.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2-Copy1.ipynb  Untitled2.ipynb  VI Well .ipynb  setup.cfg  test.py  test_models.py
classifiers/: __init__.py  classifier.py  generative_classifier.py
conditional_density_estimation/: __init__.py  conditional_flows.py  conditional_neural_density_ratio.py  discretely_indexed_flows_conditional.py
density_estimation/: __init__.py  discretely_indexed_flows.py  flows.py  gaussian_mixture_model.py  learned_accept_reject.py  mixture_dirichlet_process.py
generative_modelling/: __init__.py  variationnal_autoencoder.py
markov_chain_monte_carlo/: __init__.py  hamiltonian_monte_carlo.py  langevin.py  metropolis_hastings.py  smc_samplers.py  weighted_likelihood_bootstrap.py
misc/: __init__.py  distributions.py  metrics.py
pre_processing/: __init__.py  logit.py  pca.py
regressor/: __init__.py  bayesian_linear_regression.py  discriminative_regression.py  generative_regression.py  regressor.py
targets/: MNIST.py  __init__.py  conditional_targets.py  datasets.py  image.py  targets.py
tests/: Untitled.ipynb
utils/: __init__.py  hpd.py  visual.py
variational_inference/: __init__.py  discretely_indexed_flows.py  flows.py  transport_monte_carlo.py
