[metadata]
name = models
packages = classifiers, conditional_density_estimation, density_estimation, regressor, targets, variational_inference
author = Elouan ARGOUARCH

[options]
packages = classifiers, conditional_density_estimation, density_estimation, regressor, targets, variational_inference
setup_requires = wheel
install_requires =
    torch
    tqdm
    pyro-ppl
    matplotlib
    numpy
    seaborn
