[metadata]
name = models
packages = classifiers, conditional_density_estimation, density_estimation,markov_chain_monte_carlo, regressor, targets,utils, variational_inference
author = Elouan ARGOUARCH

[options]
packages = classifiers, conditional_density_estimation, density_estimation,markov_chain_monte_carlo, regressor, targets,utils, variational_inference
setup_requires = wheel
install_requires =
    torch
    scipy
    tqdm
    pyro-ppl
    matplotlib
    numpy
    seaborn
    scipy
