[metadata]
name = models
packages = classifiers, conditional_density_estimation, density_estimation,markov_chain_monte_carlo, misc, pre_processing, regressor, targets,utils, variational_inference
author = Elouan ARGOUARCH

[options]
packages = classifiers, conditional_density_estimation, density_estimation,markov_chain_monte_carlo, misc, pre_processing, regressor, targets,utils, variational_inference
setup_requires = wheel
install_requires =
    torch
    keras
    torchvision
    scikit-learn
    scipy
    tqdm
    pyro-ppl
    matplotlib
    numpy
    seaborn
    scipy
    ucimlrepo
